--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
+body{
+    background-color: darkgray;
+}
+.container{
+    display: flex;
+    justify-content: center;
+}
 .hidden {
     display: none;
 }
